--- a/treative_backend/src/main/resources/application.properties
+++ b/treative_backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=treative
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/epidemicSimulation
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
